<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnwrite"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintWidth_percent="0.40"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_state"
        android:onClick="btnwrite_Onclick"
        android:text="@string/kiroku"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btnview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintWidth_percent="0.40"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_state"
        android:onClick="btnview_Onclick"
        android:text="@string/eturan"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btncus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintWidth_percent="0.40"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_state"
        android:onClick="btnbunseki_onClick"
        android:text="@string/bunseki"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btnmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnwrite" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="81dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btnwrite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826"
        app:srcCompat="@drawable/kiroku" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="90dp"
        android:layout_height="81dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btncus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnwrite"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/bunseki" />

    <Button
        android:id="@+id/btnmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintWidth_percent="0.40"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_state"
        android:onClick="btnmail_onClick"
        android:text="@string/iken"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnview" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="79dp"
        android:layout_height="79dp"
        android:layout_marginTop="8dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/folder" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="85dp"
        android:layout_height="84dp"
        app:layout_constraintBottom_toTopOf="@+id/btnmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/btnview"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mail" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1201480534014260/9423628173"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncus"
        app:layout_constraintVertical_bias="0.625"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>