<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/hizuke"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtday"
            android:layout_width="227dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:focusable="false"
            android:inputType="date"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent">
        </EditText>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/simple_frame"
            app:layout_constraintBottom_toTopOf="@+id/txtMemo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtday"
            app:layout_constraintWidth_percent="0.50">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/simple_frame"
                    android:gravity="center"
                    android:text="@string/dantainame"></TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/simple_frame"
                    android:gravity="center"
                    android:text="@string/sensyu"></TextView>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/simple_frame"
                    android:gravity="center"
                    android:text="@string/seiseki"></TextView>

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/txtTeamA"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/simple_frame"
                    android:inputType="text"
                    android:gravity="center"
                    android:text="@string/teamA"
                    android:textSize="12sp"></EditText>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:shrinkColumns="0,1,2,3">

                    <EditText
                        android:id="@+id/playerA"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:background="@drawable/simple_frame"
                        android:inputType="text"
                        android:textSize="12sp"></EditText>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ToggleButton
                            android:id="@+id/hanA1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/hansoku_state"
                            android:textOff=" "
                            android:gravity="center"
                            android:textOn=" "
                            app:layout_constraintStart_toEndOf="@+id/bt"
                            app:layout_constraintTop_toBottomOf="@+id/TEXT" />

                        <ToggleButton
                            android:id="@+id/hanA2"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/hansoku_state"
                            android:textOff=" "
                            android:textOn=" "
                            android:gravity="center"
                            app:layout_constraintStart_toEndOf="@+id/bt"
                            app:layout_constraintTop_toBottomOf="@+id/TEXT" />
                    </LinearLayout>

                    <Spinner
                        android:id="@+id/spA1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:background="@drawable/simple_frame"
                        android:entries="@array/datotu"></Spinner>

                    <Spinner
                        android:id="@+id/spA2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:background="@drawable/simple_frame"
                        android:entries="@array/datotu"></Spinner>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nhonA"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/simple_frame"></TextView>

                    <TextView
                        android:id="@+id/nsyouA"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/simple_frame"></TextView>

                </LinearLayout>


            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/simple_frame">

                <EditText
                    android:id="@+id/txtTeamB"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/simple_frame"
                    android:inputType="text"
                    android:text="@string/teamB"
                    android:gravity="center"
                    android:textSize="12sp"></EditText>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:shrinkColumns="0,1,2,3">

                    <Spinner
                        android:id="@+id/spB1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:background="@drawable/simple_frame"
                        android:entries="@array/datotu"></Spinner>

                    <Spinner
                        android:id="@+id/spB2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:background="@drawable/simple_frame"
                        android:entries="@array/datotu"></Spinner>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ToggleButton
                            android:id="@+id/hanB1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/hansoku_state"
                            android:textOff=" "
                            android:textOn=" "
                            android:gravity="center"
                            app:layout_constraintStart_toEndOf="@+id/bt"
                            app:layout_constraintTop_toBottomOf="@+id/TEXT" />

                        <ToggleButton
                            android:id="@+id/hanB2"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/hansoku_state"
                            android:textOff=" "
                            android:textOn=" "
                            android:gravity="center"
                            app:layout_constraintStart_toEndOf="@+id/bt"
                            app:layout_constraintTop_toBottomOf="@+id/TEXT" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/playerB"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:background="@drawable/simple_frame"
                        android:inputType="text"
                        android:gravity="center"
                        android:textSize="12sp"></EditText>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nhonB"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/simple_frame"></TextView>

                    <TextView
                        android:id="@+id/nsyouB"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/simple_frame"></TextView>

                </LinearLayout>

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/txtMemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="64dp"
            android:text="@string/memo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />


        <EditText
            android:id="@+id/MEMO"
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/simple_frame"
            android:maxLines="8"
            android:maxLength="170"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMemo" />

        <Button
            android:id="@+id/kousin"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="250dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_state"
            android:text="@string/kousin"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MEMO" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>